--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.REPay"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyABDBlRIQdMlv5BrnaUlFhHXTBjJbpMUdg" />
+
+        <activity
+            android:name=".NavigationRoute"
+            android:exported="false"
+            android:label="@string/title_activity_navigation_route" />
         <activity
             android:name=".SplashREPay"
             android:exported="true">
@@ -21,11 +41,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".otpRequestMainFragment"
-            android:exported="false">
-        </activity>
+            android:name=".MainFragment"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
