--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,7 +11,8 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/splashlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@drawable/splashlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.REPay"
         tools:targetApi="31">
@@ -45,5 +49,7 @@
             android:name=".MainFragment"
             android:exported="false"></activity>
     </application>
+
+
 
 </manifest>
