--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/splashlogo"
         android:label="@string/app_name"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/splashlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.REPay"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
